--- a/frontend/src/app/faq/faq.module.css
+++ b/frontend/src/app/faq/faq.module.css
@@ -30,6 +30,23 @@
 }
 
 .question__text {
-    margin-top: 16px;
     margin-right: 20px;
+    max-height: 0;
+    overflow-y: hidden;
+    transition: padding .2s ease-out;
+}
+
+.question__text_opened {
+    transition: padding .2s ease-out;
+    padding-top: 16px;
+    max-height: 100%;
+}
+
+.btn {
+    transform: rotate(0);
+    transition: transform .2s ease-out;
+}
+
+.btn_rotated {
+    transform: rotate(180deg);
 }
