--- a/frontend/src/components/CartDisplay/cart_display.module.css
+++ b/frontend/src/components/CartDisplay/cart_display.module.css
@@ -6,4 +6,9 @@
     border-radius: 8px;
     padding: 4px;
     margin-right: 5px;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
