--- a/frontend/src/components/Filter/filter.module.scss
+++ b/frontend/src/components/Filter/filter.module.scss
@@ -7,17 +7,19 @@
 .field {
   margin-bottom: 16px;
   font-size: 14px;
-  font: 'SF Pro Text', Helvetica, Arial, san-serif;
+  font-family: var(--font-sf);
 }
 
 .input {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px 16px;
   border-radius: 8px;
   border: 1px solid var(--text-tertiary);
 
   input {
+    width: 100%;
     border: none;
     background: transparent;
   }
@@ -27,5 +29,6 @@
   color: var(--text-tertiary)
 }
 
-
-
+.img__wrapper {
+  display: flex;
+}
